--- a/Property FW and wreath products/Bouts/biblio.bib
+++ b/Property FW and wreath products/Bouts/biblio.bib
@@ -1,63 +1,80 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Grégoire Schneeberger at 2021-01-06 19:56:32 +0100 
+%% Created for Grégoire Schneeberger at 2021-01-08 09:28:24 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{MR1213151,
+	author = {Brick, Stephen G},
+	date-added = {2021-01-08 09:28:00 +0100},
+	date-modified = {2021-01-08 09:28:00 +0100},
+	doi = {10.1016/0022-4049(93)90150-R},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Brick/Brick - 1993 - Quasi-isometries and ends of groups.pdf:pdf},
+	issn = {0022-4049},
+	journal = {J. Pure Appl. Algebr.},
+	number = {1},
+	pages = {23--33},
+	title = {{Quasi-isometries and ends of groups}},
+	url = {https://doi.org/10.1016/0022-4049(93)90150-R},
+	volume = {86},
+	year = {1993},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0022-4049(93)90150-R}}
+
 @unpublished{LS2021,
-        AUTHOR = {Leemann, Paul-Henry and Schneeberger, Grégoire},
-         TITLE = {Groups acting with bounded orbits and wreath products},
-          YEAR = {In preparation}
-}
+	author = {Leemann, Paul-Henry and Schneeberger, Gr{\'e}goire},
+	title = {Groups acting with bounded orbits and wreath products},
+	year = {In preparation}}
 
-@article {MR1967888,
-    AUTHOR = {Diestel, Reinhard and K\"{u}hn, Daniela},
-     TITLE = {Graph-theoretical versus topological ends of graphs},
-      NOTE = {Dedicated to Crispin St. J. A. Nash-Williams},
-   JOURNAL = {J. Combin. Theory Ser. B},
-  FJOURNAL = {Journal of Combinatorial Theory. Series B},
-    VOLUME = {87},
-      YEAR = {2003},
-    NUMBER = {1},
-     PAGES = {197--206},
-      ISSN = {0095-8956},
-   MRCLASS = {05C99 (54F50)},
-  MRNUMBER = {1967888},
-MRREVIEWER = {Jozef \v{S}ir\'{a}\v{n}},
-       DOI = {10.1016/S0095-8956(02)00034-5},
-       URL = {https://doi.org/10.1016/S0095-8956(02)00034-5},
-}
+@article{MR1967888,
+	author = {Diestel, Reinhard and K\"{u}hn, Daniela},
+	doi = {10.1016/S0095-8956(02)00034-5},
+	fjournal = {Journal of Combinatorial Theory. Series B},
+	issn = {0095-8956},
+	journal = {J. Combin. Theory Ser. B},
+	mrclass = {05C99 (54F50)},
+	mrnumber = {1967888},
+	mrreviewer = {Jozef \v{S}ir\'{a}\v{n}},
+	note = {Dedicated to Crispin St. J. A. Nash-Williams},
+	number = {1},
+	pages = {197--206},
+	title = {Graph-theoretical versus topological ends of graphs},
+	url = {https://doi.org/10.1016/S0095-8956(02)00034-5},
+	volume = {87},
+	year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0095-8956(02)00034-5}}
 
-@article {MR0450121,
-    AUTHOR = {Gross, Jonathan L.},
-     TITLE = {Every connected regular graph of even degree is a {S}chreier coset graph},
-   JOURNAL = {J. Combinatorial Theory Ser. B},
-  FJOURNAL = {Journal of Combinatorial Theory. Series B},
-    VOLUME = {22},
-      YEAR = {1977},
-    NUMBER = {3},
-     PAGES = {227--232},
-   MRCLASS = {05C25},
-  MRNUMBER = {0450121},
-MRREVIEWER = {A. T. White},
-}
+@article{MR0450121,
+	author = {Gross, Jonathan L.},
+	fjournal = {Journal of Combinatorial Theory. Series B},
+	journal = {J. Combinatorial Theory Ser. B},
+	mrclass = {05C25},
+	mrnumber = {0450121},
+	mrreviewer = {A. T. White},
+	number = {3},
+	pages = {227--232},
+	title = {Every connected regular graph of even degree is a {S}chreier coset graph},
+	volume = {22},
+	year = {1977}}
 
-@incollection {MR1358635,
-    AUTHOR = {Lubotzky, Alexander},
-     TITLE = {Cayley graphs: eigenvalues, expanders and random walks},
- BOOKTITLE = {Surveys in combinatorics, 1995 ({S}tirling)},
-    SERIES = {London Math. Soc. Lecture Note Ser.},
-    VOLUME = {218},
-     PAGES = {155--189},
- PUBLISHER = {Cambridge Univ. Press, Cambridge},
-      YEAR = {1995},
-   MRCLASS = {05C25 (15A18 60J15 68R10)},
-  MRNUMBER = {1358635},
-MRREVIEWER = {Daniel Ashlock},
-       DOI = {10.1017/CBO9780511662096.008},
-       URL = {https://doi.org/10.1017/CBO9780511662096.008},
-}
+@incollection{MR1358635,
+	author = {Lubotzky, Alexander},
+	booktitle = {Surveys in combinatorics, 1995 ({S}tirling)},
+	doi = {10.1017/CBO9780511662096.008},
+	mrclass = {05C25 (15A18 60J15 68R10)},
+	mrnumber = {1358635},
+	mrreviewer = {Daniel Ashlock},
+	pages = {155--189},
+	publisher = {Cambridge Univ. Press, Cambridge},
+	series = {London Math. Soc. Lecture Note Ser.},
+	title = {Cayley graphs: eigenvalues, expanders and random walks},
+	url = {https://doi.org/10.1017/CBO9780511662096.008},
+	volume = {218},
+	year = {1995},
+	Bdsk-Url-1 = {https://doi.org/10.1017/CBO9780511662096.008}}
 
 @article{Leemann2020,
 	abstract = {We prove that every connected locally finite regular graph has a double cover which is isomorphic to a Schreier graph.},
@@ -93,36 +110,33 @@ Reprint of the 1994 edition},
 	year = {2010},
 	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-0346-0332-4}}
 
-@book {Stallings1971,
-    AUTHOR = {Stallings, John},
-     TITLE = {Group theory and three-dimensional manifolds},
-      NOTE = {A James K. Whittemore Lecture in Mathematics given at Yale
-              University, 1969,
-              Yale Mathematical Monographs, 4},
- PUBLISHER = {Yale University Press, New Haven, Conn.-London},
-      YEAR = {1971},
-     PAGES = {v+65},
-   MRCLASS = {57A10 (20E30)},
-  MRNUMBER = {0415622},
-MRREVIEWER = {Edward M. Bloomberg},
-}
+@book{Stallings1971,
+	author = {Stallings, John},
+	mrclass = {57A10 (20E30)},
+	mrnumber = {0415622},
+	mrreviewer = {Edward M. Bloomberg},
+	note = {A James K. Whittemore Lecture in Mathematics given at Yale University, 1969, Yale Mathematical Monographs, 4},
+	pages = {v+65},
+	publisher = {Yale University Press, New Haven, Conn.-London},
+	title = {Group theory and three-dimensional manifolds},
+	year = {1971}}
 
-@article {Cornulier2011,
-    AUTHOR = {Cornulier, Yves and Kar, Aditi},
-     TITLE = {On property ({FA}) for wreath products},
-   JOURNAL = {J. Group Theory},
-  FJOURNAL = {Journal of Group Theory},
-    VOLUME = {14},
-      YEAR = {2011},
-    NUMBER = {1},
-     PAGES = {165--174},
-      ISSN = {1433-5883},
-   MRCLASS = {20E22 (20E08 20F05)},
-  MRNUMBER = {2764930},
-MRREVIEWER = {Peter A. Linnell},
-       DOI = {10.1515/JGT.2010.044},
-       URL = {https://doi.org/10.1515/JGT.2010.044},
-}
+@article{Cornulier2011,
+	author = {Cornulier, Yves and Kar, Aditi},
+	doi = {10.1515/JGT.2010.044},
+	fjournal = {Journal of Group Theory},
+	issn = {1433-5883},
+	journal = {J. Group Theory},
+	mrclass = {20E22 (20E08 20F05)},
+	mrnumber = {2764930},
+	mrreviewer = {Peter A. Linnell},
+	number = {1},
+	pages = {165--174},
+	title = {On property ({FA}) for wreath products},
+	url = {https://doi.org/10.1515/JGT.2010.044},
+	volume = {14},
+	year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.1515/JGT.2010.044}}
 
 @book{Bekka2008,
 	author = {Bekka, Bachir and de la Harpe, Pierre and Valette, Alain},
@@ -158,97 +172,91 @@ MRREVIEWER = {Peter A. Linnell},
 	Bdsk-Url-1 = {http://doi.wiley.com/10.1002/jgt.3190080407},
 	Bdsk-Url-2 = {https://doi.org/10.1002/jgt.3190080407}}
 
-@article {Neuhauser2005a,
-    AUTHOR = {Neuhauser, Markus},
-     TITLE = {Relative property ({T}) and related properties of wreath
-              products},
-   JOURNAL = {Math. Z.},
-  FJOURNAL = {Mathematische Zeitschrift},
-    VOLUME = {251},
-      YEAR = {2005},
-    NUMBER = {1},
-     PAGES = {167--177},
-      ISSN = {0025-5874},
-   MRCLASS = {20E22 (20F69 22D10 43A35)},
-  MRNUMBER = {2176470},
-MRREVIEWER = {Alain Valette},
-       DOI = {10.1007/s00209-005-0794-9},
-       URL = {https://doi.org/10.1007/s00209-005-0794-9},
-}
+@article{Neuhauser2005a,
+	author = {Neuhauser, Markus},
+	doi = {10.1007/s00209-005-0794-9},
+	fjournal = {Mathematische Zeitschrift},
+	issn = {0025-5874},
+	journal = {Math. Z.},
+	mrclass = {20E22 (20F69 22D10 43A35)},
+	mrnumber = {2176470},
+	mrreviewer = {Alain Valette},
+	number = {1},
+	pages = {167--177},
+	title = {Relative property ({T}) and related properties of wreath products},
+	url = {https://doi.org/10.1007/s00209-005-0794-9},
+	volume = {251},
+	year = {2005},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00209-005-0794-9}}
 
-@ARTICLE{Cornulier2013,
-       author = {{Cornulier}, Yves},
-        title = "{Group actions with commensurated subsets, wallings and cubings}",
-      journal = {arXiv e-prints},
-     keywords = {Mathematics - Group Theory, Mathematics - Geometric Topology, Primary 20F65, Secondary 20B25, 05C12, 20B27, 20E22},
-         year = 2013,
-        month = feb,
-          eid = {arXiv:1302.5982},
-        pages = {arXiv:1302.5982},
-archivePrefix = {arXiv},
-       eprint = {1302.5982},
- primaryClass = {math.GR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2013arXiv1302.5982C}
-}
+@article{Cornulier2013,
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2013arXiv1302.5982C},
+	archiveprefix = {arXiv},
+	author = {{Cornulier}, Yves},
+	eid = {arXiv:1302.5982},
+	eprint = {1302.5982},
+	journal = {arXiv e-prints},
+	keywords = {Mathematics - Group Theory, Mathematics - Geometric Topology, Primary 20F65, Secondary 20B25, 05C12, 20B27, 20E22},
+	month = feb,
+	pages = {arXiv:1302.5982},
+	primaryclass = {math.GR},
+	title = {{Group actions with commensurated subsets, wallings and cubings}},
+	year = 2013}
 
-@article {Cherix2004,
-    AUTHOR = {Cherix, Pierre-Alain and Martin, Florian and Valette, Alain},
-     TITLE = {Spaces with measured walls, the {H}aagerup property and
-              property ({T})},
-   JOURNAL = {Ergodic Theory Dynam. Systems},
-  FJOURNAL = {Ergodic Theory and Dynamical Systems},
-    VOLUME = {24},
-      YEAR = {2004},
-    NUMBER = {6},
-     PAGES = {1895--1908},
-      ISSN = {0143-3857},
-   MRCLASS = {22D05 (37A15)},
-  MRNUMBER = {2106770},
-MRREVIEWER = {A. Morimoto},
-       DOI = {10.1017/S0143385704000185},
-       URL = {https://doi.org/10.1017/S0143385704000185},
-}
+@article{Cherix2004,
+	author = {Cherix, Pierre-Alain and Martin, Florian and Valette, Alain},
+	doi = {10.1017/S0143385704000185},
+	fjournal = {Ergodic Theory and Dynamical Systems},
+	issn = {0143-3857},
+	journal = {Ergodic Theory Dynam. Systems},
+	mrclass = {22D05 (37A15)},
+	mrnumber = {2106770},
+	mrreviewer = {A. Morimoto},
+	number = {6},
+	pages = {1895--1908},
+	title = {Spaces with measured walls, the {H}aagerup property and property ({T})},
+	url = {https://doi.org/10.1017/S0143385704000185},
+	volume = {24},
+	year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.1017/S0143385704000185}}
 
-@article {Barnhill2008,
-	AUTHOR = {Barnhill, Angela and Chatterji, Indira},
-     TITLE = {Property ({T}) versus Property {FW}},
-   JOURNAL = {Enseign. Math. (2)},
-  FJOURNAL = {L'Enseignement Math\'{e}matique. Revue Internationale. 2e S\'{e}rie},
-    VOLUME = {54},
-      YEAR = {2008},
-    NUMBER = {1-2},
-     PAGES = {16--18},
-      ISSN = {0013-8584},
-   MRCLASS = {00A05 (00A07)},
-  MRNUMBER = {2454697},
-}
+@article{Barnhill2008,
+	author = {Barnhill, Angela and Chatterji, Indira},
+	fjournal = {L'Enseignement Math\'{e}matique. Revue Internationale. 2e S\'{e}rie},
+	issn = {0013-8584},
+	journal = {Enseign. Math. (2)},
+	mrclass = {00A05 (00A07)},
+	mrnumber = {2454697},
+	number = {1-2},
+	pages = {16--18},
+	title = {Property ({T}) versus Property {FW}},
+	volume = {54},
+	year = {2008}}
 
-@book {DelaHarpe2000,
-    AUTHOR = {de la Harpe, Pierre},
-     TITLE = {Topics in geometric group theory},
-    SERIES = {Chicago Lectures in Mathematics},
- PUBLISHER = {University of Chicago Press, Chicago, IL},
-      YEAR = {2000},
-     PAGES = {vi+310},
-      ISBN = {0-226-31719-6; 0-226-31721-8},
-   MRCLASS = {20F65 (20F69 57M07)},
-  MRNUMBER = {1786869},
-MRREVIEWER = {Lee Mosher},
-}
+@book{DelaHarpe2000,
+	author = {de la Harpe, Pierre},
+	isbn = {0-226-31719-6; 0-226-31721-8},
+	mrclass = {20F65 (20F69 57M07)},
+	mrnumber = {1786869},
+	mrreviewer = {Lee Mosher},
+	pages = {vi+310},
+	publisher = {University of Chicago Press, Chicago, IL},
+	series = {Chicago Lectures in Mathematics},
+	title = {Topics in geometric group theory},
+	year = {2000}}
 
-@incollection {Moller1995,
-    AUTHOR = {M\"{o}ller, R\"{o}gnvaldur G.},
-     TITLE = {Groups acting on locally finite graphs---a survey of the
-              infinitely ended case},
- BOOKTITLE = {Groups '93 {G}alway/{S}t. {A}ndrews, {V}ol. 2},
-    SERIES = {London Math. Soc. Lecture Note Ser.},
-    VOLUME = {212},
-     PAGES = {426--456},
- PUBLISHER = {Cambridge Univ. Press, Cambridge},
-      YEAR = {1995},
-   MRCLASS = {05C25 (20B27)},
-  MRNUMBER = {1337287},
-MRREVIEWER = {S. C. Althoen},
-       DOI = {10.1017/CBO9780511629297.011},
-       URL = {https://doi.org/10.1017/CBO9780511629297.011},
-}
+@incollection{Moller1995,
+	author = {M\"{o}ller, R\"{o}gnvaldur G.},
+	booktitle = {Groups '93 {G}alway/{S}t. {A}ndrews, {V}ol. 2},
+	doi = {10.1017/CBO9780511629297.011},
+	mrclass = {05C25 (20B27)},
+	mrnumber = {1337287},
+	mrreviewer = {S. C. Althoen},
+	pages = {426--456},
+	publisher = {Cambridge Univ. Press, Cambridge},
+	series = {London Math. Soc. Lecture Note Ser.},
+	title = {Groups acting on locally finite graphs---a survey of the infinitely ended case},
+	url = {https://doi.org/10.1017/CBO9780511629297.011},
+	volume = {212},
+	year = {1995},
+	Bdsk-Url-1 = {https://doi.org/10.1017/CBO9780511629297.011}}
