--- a/Property FW and wreath products/Bouts/ends.tex
+++ b/Property FW and wreath products/Bouts/ends.tex
@@ -82,7 +82,7 @@
 %
 \begin{abstract}
 The group property FW stands in-between the celebrated Kazdhan's property (T) and Serre's property FA. Among many characterizations, it might be defined using the number of ends of Schreier graphs.
-Using this, we characterize which show that a finitely generated wreath product $G\wr_XH$ has property FW if and only if both $G$ and $H$ have property FW and $X$ is finite.
+Using this, we will show that a finitely generated wreath product $G\wr_XH$ has property FW if and only if both $G$ and $H$ have property FW and $X$ is finite.
 \end{abstract}
 %
 %
