--- a/Property FW and wreath products/Bouts/graphes/path_semidirect_ends.tex
+++ b/Property FW and wreath products/Bouts/graphes/path_semidirect_ends.tex
@@ -4,7 +4,7 @@
 \fill[color = gray!20] (-4,4) -- (2,4) --(4,6) -- (-2,6) --cycle;
 \draw [dotted] (0,4) -- (2,6) --(2,4);
 \draw (3,1.5) node {$\Gamma_x^H$};
-\draw (0.8,3) node {$\Gamma_z^K$};
+\draw (0.8,3) node {$\Gamma_z^N$};
 \draw (3,5.5) node {$\Gamma_y^H$};
 \node[style=blacknode, label={below:$x$}] (x) at (-2,1) {};
 \node[style=blacknode, label={below:$z$}]  (z) at (1.5,1.5) {};
