--- a/Property FW and wreath products/Bouts/Proof.tex
+++ b/Property FW and wreath products/Bouts/Proof.tex
@@ -57,7 +57,7 @@ We will show that $\Gamma\setminus K'$ has only one infinite connected component
 By definition of $K'$, if $x$ is not in $K'$, then either $\Gamma_x^H$ has one end or $\Gamma_x^H$ does not contains vertices in $K'$. 
 
 Let $x$ and $y$ be two vertices, each of them lying in some infinite connected component of $\Gamma\setminus K'$.
-We will construct a path from $x$ to $y$ in $\Gamma\setminus K'$ as a concatenation of three smaller paths as follow, see Figure~\ref{Figure:PathSemiDirect}.
+We will construct a path from $x$ to $y$ in $\Gamma\setminus K'$ as a concatenation of three smaller paths as follows, see Figure~\ref{Figure:PathSemiDirect}.
 First, a path in $\Gamma_x^H\setminus K'$ from $x$ to some $z$, then a path in $\Gamma_z^N\setminus K'$ from $z$ to some $z'\in (\Gamma_z^N\cap \Gamma_y^H)\setminus K'$, and finally a path in $\Gamma_y^H\setminus K'$ from $z'$ to $y$.
 In order to finish the proof, it remains to exhibit elements $z$ and $z'$ and the three desired paths.
 %
@@ -75,7 +75,7 @@ The action of $G$ on $\Gamma$ being transitive, there exists an element $(n_0,h_
 Since $K'$ is finite, the set $\Gamma_x^H\setminus K'$ is infinite.
 Moreover, there is infinitely many $z$ in $\Gamma_x^H\setminus K'$ such that either $\Gamma_z^N$ is one-ended or $\Gamma_z^N$ does not intersect $K'$.
 For such a $z$ there exists $h$ such that $(1,h).x=z$.
-Now, the vertex $z'\coloneqq(hh_0^{-1}n_0,h).x$ is both equal to $(hh_0^{-1}.n_0,1)(1,h_0).x=(hh_0^{-1}.n_0,1).z$ and to $(1,hh_0^{-1})(n_0,h_0).x=(1,hh_0^{-1}).y$. That is, $z'$ is in $\Gamma_z^N\cap X_y^H$.
+Now, the vertex $z'\coloneqq(hh_0^{-1}.n_0,h).x$ is both equal to $(hh_0^{-1}.n_0,1)(1,h_0).x=(hh_0^{-1}.n_0,1).z$ and to $(1,hh_0^{-1})(n_0,h_0).x=(1,hh_0^{-1}).y$. That is, $z'$ is in $\Gamma_z^N\cap \Gamma_y^H$.
 A simple computation show us that the map $z\mapsto z'$ is injective: $z_1'=z_2'$ if and only if $z_1=z_2$.
 Since $K'$ is finite, there is only finitely many $z'$ in $K'$ and hence there is infinitely many $z\in \Gamma_x^H$ such that both $z$ and $z'$ are not in $K'$ and either $\Gamma_z^N$ is one-ended or $\Gamma_z^N$ does not intersect $K'$.
 
@@ -122,7 +122,7 @@ If $G\wr_XH$ has property FW, then
 We will prove the contrapositives. The idea is to construct, for each of the two cases, a Schreier graph of $G\wr_XH$ with more than one end by exhibiting some well-chosen action of $G\wr_XH$.
 We fix some finite generating sets $S$ and $T$ of $G$ and $H$ and let 
 \[
-	U\coloneqq\setst{(\delta_x^s,1_H)}{s \in S} \cup \setst{(\mathbf 1,t}{t \in T}
+	U\coloneqq\setst{(\delta_x^s,1_H)}{s \in S} \cup \setst{(\mathbf 1,t)}{t \in T}
 \]
 be the standard generating set of $G\wr_XH$.
 %
@@ -136,7 +136,7 @@ The group $G$ acting on itself by left multiplications, we have the so-called \e
 	(\varphi,h). (g,x) \coloneqq (\varphi(h.x)g, h.x).
 \]
 Since both $G\curvearrowright G$ and $H\curvearrowright X'$ are transitive, the action $G\wr_XH\curvearrowright Y$ is also transitive. 
-Therefore, the orbital Schreier graph of $G\wr_XH\curvearrowright Y$ is isomorphic to the Schreier graph $\Gamma\coloneqq\Sch(G\wr_XH, \stab(1_G,x_0), U)$. We decompose this graph into leaves of the form $Y_g = \{ g \} \times X'$. There are two types of edges in $\Gamma$, which are coming from the two sets of generators, see Figure~\ref{Figure:Leaves}. The first ones, of the form $(\mathbf 1,t)$, give us on each leaf a copy of the orbital Schreier graph of $H \curvearrowright X'$. Indeed,
+Therefore, the orbital Schreier graph of $G\wr_XH\curvearrowright Y$ is isomorphic to the Schreier graph $\Gamma\coloneqq\Sch\left(G\wr_XH, \stab((1_G,x_0)\right), U)$. We decompose this graph into leaves of the form $Y_g = \{ g \} \times X'$. There are two types of edges in $\Gamma$, which are coming from the two sets of generators, see Figure~\ref{Figure:Leaves}. The first ones, of the form $(\mathbf 1,t)$, give us on each leaf a copy of the orbital Schreier graph of $H \curvearrowright X'$. Indeed,
 \[
 	(\mathbf 1,t).(g,x) = (g, t.x).
 \]
