--- a/Property FW and wreath products/Bouts/Proof.tex
+++ b/Property FW and wreath products/Bouts/Proof.tex
@@ -22,7 +22,7 @@
 %
 %
 This section is devoted to the proof of Theorem~\ref{Thm:Main}. This proof is split into two parts: Lemma \ref{Lemma:Semidirect_ends} and its Corollary \ref{Cor:Wreath_ends} and Lemma \ref{Lem:Wreath_groups_ends}.
-We then conclude by a result on finite index subgroups.
+%We then conclude by a result on finite index subgroups.
 
 %\todo[inline]{Est-ce qu'on veut rajouter que si $H$ est un sous-groupe d'indice fini de $G$, alors $G$ a FW ssi $H$ a FW ? C'est le seul petit résultat qui fait sens à prouver. En effet, ceux sur les sommes directes font intervenir des groupes qui ne sont pas de type fini.}
 
@@ -47,7 +47,7 @@ Suppose that $H$ does not have property FW. Then there exists a Schreier graph $
 Since $H$ acts transitively on $\Gamma$, so does $G$.
 In fact, the graph of the action $G$ on the vertices of $\Gamma$ is isomorphic to the graph $\Gamma$ with some additional loops for generators in $S\times\{1\}$. As adding loops does not change the number of ends, this Schreier graph has more than one end and therefore $G$ does not have property FW.
 
-Suppose now that both $N$ and $H$ have property FW. We want to show that every Schreier graphs of $G$ have at most one end. If they are all finite, then there is nothing to prove (and $G$ is finite). So let $\Gamma$ be an infinite Schreier graph of $G$ with respect to the generating set $U$. The groups $N$ and $H$ acts on $\Gamma$ by restriction of the action of $G$. That is, $n.x = (n,1).x$ and $h.x = (1,h).x$ for $x$ a vertex of $\Gamma$.
+Suppose now that both $N$ and $H$ have property FW. We want to show that every Schreier graphs of $G$ have at most one end. If they are all finite, then there is nothing to prove (and $G$ is finite). So let $\Gamma$ be an infinite Schreier graph of $G$ with respect to the generating set $U$. The groups $N$ and $H$ act on $\Gamma$ by restriction of the action of $G$. That is, $n.x = (n,1).x$ and $h.x = (1,h).x$ for $x$ a vertex of $\Gamma$.
 For each vertex $x$ we define $\Gamma_x^H$ (and respectively $\Gamma_x^N$) as the Schreier graph obtained from the action of $H$ (respectively $N$) on the $H$-orbit (respectively $N$-orbit) of $x$. These are subgraphs of $\Gamma$. As $N$ and $H$ have property FW, the graphs $\Gamma_x^H$ and $\Gamma_x^N$ are either finite or one-ended. We want to prove that in this case $\Gamma$ has exactly one end. 
 
 Let $K$ be a finite set of vertices of $\Gamma$.
