Mise en page figure

--- a/Property FW and wreath products/Bouts/Definitions.tex
+++ b/Property FW and wreath products/Bouts/Definitions.tex
@@ -86,7 +86,8 @@ Observe that the requirement that both $S$ and $T$ are finite is crucial for the
 \end{figure}
 %
 %
-\todo{Mise en page étrange avec les figures}Let $\Gamma$ be a graph and $K$ a finite subset of vertices. The graph $\Gamma\setminus K$ is the subgraph of $\Gamma$ obtained by deleting all vertices in $K$ and all edges adjacent to them. This graph is not necessarily connected.
+
+Let $\Gamma$ be a graph and $K$ a finite subset of vertices. The graph $\Gamma\setminus K$ is the subgraph of $\Gamma$ obtained by deleting all vertices in $K$ and all edges adjacent to them. This graph is not necessarily connected.
 \begin{defn}\label{Def:Ends}
 Let $\Gamma$ be a graph. The \emph{number of ends} of $\Gamma$ is the supremum, taken over all finite $K$, of the number of infinite connected components of $\Gamma\setminus K$.
 \end{defn}
